--- a/index.html
+++ b/index.html
@@ -3,19 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monimba - Maintenance</title>
+    <title>Maintenance - On revient vite !</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { background-color: #0a0a0a; color: white; font-family: sans-serif; }
-        .glow { box-shadow: 0 0 50px rgba(255, 140, 0, 0.2); }
+        body { background-color: #0a0a0a; color: white; font-family: 'Inter', sans-serif; }
+        .glow { box-shadow: 0 0 60px rgba(245, 158, 11, 0.15); }
     </style>
 </head>
-<body class="flex items-center justify-center min-h-screen">
-    <div class="text-center p-8 glow border border-white/10 rounded-2xl bg-white/5 max-w-md">
-        <h1 class="text-3xl font-bold mb-4 text-orange-500">Monimba arrive...</h1>
-        <p class="text-gray-400 mb-6">Nous mettons à jour la plateforme pour vous offrir la meilleure expérience immobilière. On revient dans quelques secondes !</p>
-        <div class="flex justify-center">
-            <div class="animate-spin rounded-full h-8 w-8 border-t-2 border-orange-500"></div>
+<body class="flex items-center justify-center min-h-screen p-4">
+    <div class="text-center p-10 glow border border-white/10 rounded-3xl bg-white/5 max-w-lg backdrop-blur-sm">
+        <div class="flex justify-center mb-8">
+            <div class="relative">
+                <div class="animate-ping absolute inline-flex h-full w-full rounded-full bg-orange-500 opacity-20"></div>
+                <div class="relative inline-flex rounded-full h-12 w-12 border-4 border-t-orange-500 border-orange-500/20 animate-spin"></div>
+            </div>
+        </div>
+
+        <h1 class="text-3xl font-bold mb-4 tracking-tight text-white">
+            Mise à jour en cours
+        </h1>
+        
+        <p class="text-gray-400 text-lg leading-relaxed mb-8">
+            Nous optimisons la plateforme pour vous offrir la meilleure expérience possible. 
+            Le service sera de nouveau disponible dans quelques instants.
+        </p>
+
+        <div class="text-sm text-gray-500 font-medium tracking-widest uppercase">
+            Merci de votre patience
         </div>
     </div>
 </body>
